--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "express",
-  "version": "1.3.0",
-  "description": "A discord.js music and moderation bot free and open source",
+  "name": "moonbot",
+  "version": "1.0.0",
+  "description": "Moon Discord bot",
   "main": "src/index",
-  "repository": "https://github.com/ItzLightyHD/Express",
-  "author": "ItzLightyHD",
+  "repository": "",
+  "author": "nzkdevsaider",
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "axios": "^0.21.1",
     "common-tags": "^1.8.0",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "erela.js": "^1.1.8",
     "glob": "^7.1.6",
+    "lodash": "^4.17.21",
     "moment": "^2.27.0",
     "ms": "^2.1.2",
     "os": "^0.1.1",
     "request": "^2.88.2",
-    "axios": "^0.21.1"
+    "sqlite": "^4.0.19",
+    "sqlite3": "^5.0.2"
   }
 }
